# SpacecraftSensorSynthesizer

./: .gitignore  CMakeLists.txt  README.md  S3_architecture.drawio  build.sh  build_test.sh  dockerfile
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
src/: CMakeLists.txt  main.cpp
src/communication/: comm_types.hh
src/logger/: logger.cpp  logger.hh
src/networking/: client.hh  networking.hh  server.hh  socket.hh
src/sensor_synthesizer/: sensor_synthesizer.cpp  sensor_synthesizer.hh
test/functional/: CMakeLists.txt  S3_functional_test.cpp
